tests/NormalTests/paczka1/fuzzy1/52539456.err
Error in line 1: S220 A243 69,8
Error in line 19: 91qp0vPlBD0 S220 95,8
Error in line 24: S220 S220 21,03
Error in line 18: S220 S220 6,7
Error in line 23: 91qp0vPlBD0 A243 90,1
Error in line 27: S220 A919 3,2
Error in line 28: l8ejt1EPU A919 52,9
